# spie2026

./: .gitattributes  .gitignore  CONTRIBUTE.md  LICENSE  README.md  packages.yml
.binder/: apt.txt  environment.yml
dcc4cbct/: pyproject.toml  setup.py
dcc4cbct/src/dcc4cbct/: fbcc.py  itk_utils.py  jlpackage.py  misc.py  rtk_utils.py
dcc4cbct/tests/: test_install.py
spie2026-paper/: Notes.md  corrected_geo.xml  cost_pre_corr.npz  costs_2d.npz  estimate_noise.py  geo.xml  geo1.xml  geo2.xml  optimized_geo.xml  sf_config.json  simulate.py  visualize.html  visualize.ipynb
