[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dcc4cbct"
version = "0.1.0"
description = "A package for computing DCC on CBCT data."
authors = [
    {name = "Jérome Lesaint", email = "lesaint.jerome@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]